# abidjan-housing-dataset

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: run.yml
input/: jumiadeals20230604.csv
scraper/: README.md  requirements.txt  scraper.toml.example
scraper/scraper/: middlewares.py  pipelines.py  settings.py
scraper/scraper/spiders/: links_spider.py  posts_spider.py
