[tool.poetry]
name = "abidjan housing dataset"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
pip = "^23.0.1"
astroid = "^2.15.0"
attrs = "^22.2.0"
automat = "^22.10.0"
autopep8 = "^2.0.2"
certifi = "^2022.12.7"
cffi = "^1.15.1"
charset-normalizer = "^3.1.0"
constantly = "^15.1.0"
cryptography = "^39.0.2"
cssselect = "^1.2.0"
dill = "^0.3.6"
filelock = "^3.9.0"
hyperlink = "^21.0.0"
idna = "^3.4"
incremental = "^22.10.0"
isort = "^5.12.0"
itemadapter = "^0.7.0"
itemloaders = "^1.0.6"
jmespath = "^1.0.1"
lazy-object-proxy = "^1.9.0"
lxml = "^4.9.2"
mccabe = "^0.7.0"
packaging = "^23.0"
parsel = "^1.7.0"
platformdirs = "^3.1.1"
protego = "^0.2.1"
pyasn1 = "^0.4.8"
pyasn1-modules = "^0.2.8"
pycodestyle = "^2.10.0"
pycparser = "^2.21"
pydispatcher = "^2.0.7"
pylint = "^2.17.0"
pyopenssl = "^23.0.0"
pyparsing = "^3.0.9"
queuelib = "^1.6.2"
requests = "^2.28.2"
requests-file = "^1.5.1"
scrapy = "^2.8.0"
service-identity = "^21.1.0"
six = "^1.16.0"
tldextract = "^3.4.0"
tomli = "^2.0.1"
tomlkit = "^0.11.6"
twisted = "^22.10.0"
typing-extensions = "^4.5.0"
urllib3 = "^1.26.15"
w3lib = "^2.1.1"
wrapt = "^1.15.0"
zope-interface = "^5.5.2"
mysql-connector-python = "^8.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
